crates/ir/tests/ir/snapshots/main__ir__lower__json__json_nested.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_nested

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(d, List[d]) -> List[d]
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
import core/json/parse_json as parse_json(String) -> Result[String, Json]
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/json_object as json_object(List[(String, Json)]) -> Json
import core/json/json_get as json_get(Json, String) -> Option[Json]
import core/json/JBool as JBool(Bool) -> Json
import core/option/Some as Some(c) -> Option[c]
declare json_get: (Json, String) -> Option[Json]
declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare parse_json: (String) -> Result[String, Json]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JNum#2(2.0)
  let v2: (String, Json) = tuple("b", v1)
  let v3: List[(String, Json)] = construct List::Nil#1()
  let v4: List[(String, Json)] = construct List::Cons#0(v2, v3)
  let v0: Json = call json_object(v4)
  let v6: Json = construct Json::JNum#2(1.0)
  let v7: List[Json] = construct List::Nil#1()
  let v8: List[Json] = construct List::Cons#0(v6, v7)
  let v5: Json = construct Json::JArr#4(v8)
  let v10: (String, Json) = tuple("a", v0)
  let v11: (String, Json) = tuple("list", v5)
  let v12: List[(String, Json)] = construct List::Nil#1()
  let v13: List[(String, Json)] = construct List::Cons#0(v11, v12)
  let v14: List[(String, Json)] = construct List::Cons#0(v10, v13)
  let v9: Json = call json_object(v14)
  let v15: String = call json_to_string(v9)
  let v16: Result[String, Json] = call parse_json(v15)
  switch v16 {
    0 (v17: Json) ->
      let v18: Option[Json] = call json_get(v17, "a")
      switch v18 {
        0 (v19: c) ->
          switch v19 {
            5 (v20: Map[String, Json]) ->
              let v21: Option[Json] = call json_get(v17, "list")
              switch v21 {
                0 (v22: c) ->
                  switch v22 {
                    4 (v23: List[Json]) ->
                      let v24: Dict[core/show.Show, String] = get_dict core/show.Show[String]
                      let v25: Unit = call println(v24, "ok")
                      v25
                    _ ->
                      let v26: Dict[core/show.Show, String] = get_dict core/show.Show[String]
                      let v27: Unit = call println(v26, "FAIL list")
                      v27
                  }
                _ ->
                  let v28: Dict[core/show.Show, String] = get_dict core/show.Show[String]
                  let v29: Unit = call println(v28, "FAIL list")
                  v29
              }
            _ ->
              let v30: Dict[core/show.Show, String] = get_dict core/show.Show[String]
              let v31: Unit = call println(v30, "FAIL a")
              v31
          }
        _ ->
          let v32: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v33: Unit = call println(v32, "FAIL a")
          v33
      }
    1 (v34: String) ->
      let v35: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v36: Unit = call println(v35, v34)
      v36
  }
