crates/ir/tests/ir/snapshots/main__ir__lower__json__json_null.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_null

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/json/parse_json as parse_json(String) -> Result[String, Json]
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/JBool as JBool(Bool) -> Json
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_to_string: (Json) -> String
declare parse_json: (String) -> Result[String, Json]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JNull#0()
  let v0: String = call json_to_string(v1)
  let v2: Result[String, Json] = call parse_json(v0)
  switch v2 {
    0 (v3: d) ->
      switch v3 {
        0 ->
          let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v5: Unit = call println(v4, v0)
          v5
        _ ->
          let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v7: Unit = call println(v6, "FAIL")
          v7
      }
    _ ->
      let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v9: Unit = call println(v8, "FAIL")
      v9
  }
