crates/ir/tests/ir/snapshots/main__ir__lower__json__json_roundtrip.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_roundtrip

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/json/JBool as JBool(Bool) -> Json
import core/json/JNum as JNum(Float) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/parse_json as parse_json(String) -> Result[String, Json]
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/json_object as json_object(List[(String, Json)]) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare parse_json: (String) -> Result[String, Json]
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: ~Json = construct Json::JNum#2(1.0)
  let v2: (~String, ~Json) = tuple("x", v1)
  let v3: ~Json = construct Json::JBool#1(true)
  let v4: (~String, ~Json) = tuple("y", v3)
  let v5: ~Json = construct Json::JStr#3("hello")
  let v6: (~String, ~Json) = tuple("z", v5)
  let v7: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v8: ~List[(~String, ~Json)] = construct List::Cons#0(v6, v7)
  let v9: ~List[(~String, ~Json)] = construct List::Cons#0(v4, v8)
  let v10: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v9)
  let v0: Json = call json_object(v10)
  let v11: String = call json_to_string(v0)
  let v12: Result[String, Json] = call parse_json(v11)
  switch v12 {
    0 (v13: Json) ->
      let v14: String = call json_to_string(v13)
      let v15: Result[String, Json] = call parse_json(v14)
      switch v15 {
        0 (v16: Json) ->
          let v17: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v18: Unit = call println(v17, "true")
          v18
        1 (v19: String) ->
          let v20: Dict[core/show.Show, String] = get_dict core/show.Show[String]
          let v21: Unit = call println(v20, v19)
          v21
      }
    1 (v22: String) ->
      let v23: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v24: Unit = call println(v23, v22)
      v24
  }
