crates/ir/tests/ir/snapshots/main__ir__lower__json__json_string.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__json_string

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/Cons as Cons(j, List[j]) -> List[j]
import core/json/JStr as JStr(String) -> Json
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/json_object as json_object(List[(String, Json)]) -> Json
import core/json/JBool as JBool(Bool) -> Json
import core/json/JNum as JNum(Float) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Json = construct Json::JStr#3("hello")
  let v2: (String, Json) = tuple("greeting", v1)
  let v3: List[(String, Json)] = construct List::Nil#1()
  let v4: List[(String, Json)] = construct List::Cons#0(v2, v3)
  let v0: Json = call json_object(v4)
  let v6: String = call json_to_string(v0)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v5, v6)
  v7
