crates/ir/tests/ir/snapshots/main__ir__lower__json__to_json_custom.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__to_json_custom

struct Point { x: Int, y: Int }
instance core/json.ToJson[Point] { to_json=ToJson$$Point$$to_json }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/json/JNum as JNum(Float) -> Json
import core/json/json_to_string as json_to_string(Json) -> String
import core/json/json_object as json_object(List[(String, Json)]) -> Json
import core/json/JBool as JBool(Bool) -> Json
import core/json/JStr as JStr(String) -> Json
import core/json/JArr as JArr(List[Json]) -> Json
import core/json/JObj as JObj(Map[String, Json]) -> Json
import core/map/from_list as from_list(List[(y12, z12)]) -> Map[y12, z12]
declare json_object: (List[(String, Json)]) -> Json
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Point = construct Point(1, 2)
  let v2: Dict[core/json.ToJson, Point] = get_dict core/json.ToJson[Point]
  let v3: Json = trait_call core/json.ToJson.to_json(v2, v0)
  let v4: String = call json_to_string(v3)
  let v1: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v1, v4)
  v5

fn ToJson$$Point$$to_json(v6: Point) -> Json =
  let v7: Int = project v6.0
  let v8: Dict[core/json.ToJson, Int] = get_dict core/json.ToJson[Int]
  let v9: Json = trait_call core/json.ToJson.to_json(v8, v7)
  let v10: (String, Json) = tuple("x", v9)
  let v11: Int = project v6.1
  let v12: Dict[core/json.ToJson, Int] = get_dict core/json.ToJson[Int]
  let v13: Json = trait_call core/json.ToJson.to_json(v12, v11)
  let v14: (String, Json) = tuple("y", v13)
  let v15: List[(String, Json)] = construct List::Nil#1()
  let v16: List[(String, Json)] = construct List::Cons#0(v14, v15)
  let v17: List[(String, Json)] = construct List::Cons#0(v10, v16)
  let v18: Json = call json_object(v17)
  v18
