crates/ir/tests/ir/snapshots/main__ir__lower__json__to_json_float.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module json__to_json_float

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/json/json_to_string as json_to_string(Json) -> String
declare json_to_string: (Json) -> String
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[core/json.ToJson, Float] = get_dict core/json.ToJson[Float]
  let v2: Json = trait_call core/json.ToJson.to_json(v1, 3.14)
  let v3: String = call json_to_string(v2)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4
